--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -17,7 +17,7 @@
       <td><%= a_user.id %></td>
       <td><%= a_user.username %></td>
       <td>
-        Show details
+        <a href="/users/<%= a_user.username %>">Show details</a>
       </td>
     </tr>
 
