--- a/app/views/photo_templates/show.html.erb
+++ b/app/views/photo_templates/show.html.erb
@@ -12,6 +12,24 @@
   <dt>Edit photo</dt>
   <dd>INSERT FORM HERE</dd>
   <dt>Delete photo</dt>
-  <dd>INSERT FORM HERE</dd>
-
+  <dd><a href="/delete_photo/<%= @the_photo.id %>">Delete this photo</a></dd>
 </dl>
+
+<h2>Comments</h2>
+<table>
+  <tr>
+    <th>Commenter</th>
+    <th>Comment</th>
+    <th>Posted</th>
+  </tr>
+  
+  <% @the_photo.comments.each do |a_comment| %>
+  <tr>
+    <td><%= a_comment.commenter.username %></td>
+    <td><%= a_comment.body %></td>
+    <td><%= a_comment.created_at %></td>
+  </tr>
+  <% end %>
+</table>
+
+<h3>Add a new comment</h3>
