logic added for photos/index form

--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -5,7 +5,7 @@
   <input id="browser_input" type="text" name="input_image" placeholder="Enter a URL for the image...">
 
   <label for="browser_caption">Caption</label>
-  <textarea name="input_caption" id="browser_caption" placeholder="Enter a URL for the image" rows="2"></textarea>
+  <textarea name="input_caption" id="browser_caption" placeholder="Enter a caption for the photo..." rows="2"></textarea>
 
   <label for="browser_user_id">Owner ID</label>
   <input id="browser_user_id" type="text" name="input_owner_id" placeholder="Enter an ID of a User">
